# spell-checking

./: CMakeLists.txt  main.c
algorithms/: spellcheck.c  spellcheck.h  stringdistance.c  stringdistance.h
datastructures/: linkedlist.c  linkedlist.h
